# openenv-sql-analyst

./: .env.example  .gitignore  COMPLETION_SUMMARY.md  Dockerfile  README.md  inference.py  openenv.yaml  plan.md  pyproject.toml  requirements.txt  server.py  setup_validate.sh
baseline/: run_baseline.py
data/: schema.sql  seed.py
env/: __init__.py  database.py  environment.py  models.py  reward.py
scripts/: mock_openai_server.py  smoke_tasks.py  validate-submission.sh
server/: __init__.py  app.py
tasks/: __init__.py  grader.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_baseline_provider_selection.py
