[project]
name = "openenv-sql-analyst"
version = "1.0.0"
description = "OpenEnv environment: AI agent answers business questions via SQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
baseline = ["openai>=1.0"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["env", "tasks", "baseline"]
