[project]
name = "openenv-sql-analyst"
version = "1.0.0"
description = "OpenEnv environment: AI agent answers business questions via SQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pytest>=8.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
baseline = ["openai>=1.0", "anthropic>=0.25"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["env", "tasks", "baseline", "server"]
